feat: implement skeleton for KosService